[b][color=orange]v4.23[/color], 26.06.2019[/b][list]
[*]Added new Flask to my RaidBuffReminder module.
[*]Added new Hearthstones to LocPanel.
[*]Updated Code with 8.2 changes.

[b][color=orange]v4.22[/color], 06.06.2019[/b][list]
[*]Updated compatibility with ElvUI_NihilisUI.
[*]Updated Enhanced Nameplate Auras to display the Player Name on CC Buffs, with help from Nihili <3
[*]Added new Font Expressway Bold and use it. (You need to run the Installer again)
[*]Small Layout update. (You need to run the Installer again) if you want it.[/list]

[b][color=orange]v4.21[/color], 01.06.2019[/b][list]
[*]Added new Tag: 'name:abbrev-translit'
[*]Return of the Enhanced Nameplate Auras. All Credits belong to: NihilisticPandemonium.
[*]Take account to the latest ElvUI_OptionsUI changes.[/list]

[b][color=orange]v4.20[/color], 22.05.2019[/b][list]
[*]Change the load order in the TOC file, hopefully this will fix the nil errors.
[*]Update the size for my changelog in game.
[*]Adjust nameplate settings in my install.[/list]

[b][color=orange]v4.19[/color], 18.05.2019[/b][list]
[*]Code improvements for Notifications.
[*]Disabled Call To Arms alert by default.
[*]Take account to the new ElvUI locales.
[*]Removed NSCT & CombatFeedBack.
[*]Removed a function from chat, which will prevent the Chat Editbox to flash.
[*]Overhaul my media section. I hope this will prevent some lua errors.[/list]

[b][color=orange]v4.18[/color], 15.05.2019[/b][list]
[*]Added a shield icon to Nameplate Castbar for non interruptible casts.
[*]Added an Advanced Merchant Frame (for Vendors). Credits S&L
[*]Attempt to prevent a nil error in itemLevel.
[*]Added an GCD spark below the Player UnitFrames.
[*]Added a Call to Arms Alert.
[*]Added right click functionality to my MerathilisUI Panels to temp hide the Middle Datatext.
[*]Added a RaidCD Module. Credits Klix.
[*]Added RaiderIO Styling support.[/list]

[b][color=orange]v4.17[/color], 22.04.2019[/b][list]
[*]Add some hidden alerts. Muhahaha.